* Fix: Regression where using listview scrollbar deselects selected items @ Code: Allow guests to right-click listview column header @ Code: Cleaned up a bunch of CSS hacks (mainly IE hacks) @ Code: Cleaned up some minor table selection counting bugs @ Code: Fix CSS so that IE6 shows icons in categories list

--- a/main.css
+++ b/main.css
@@ -162,7 +162,7 @@ ul.CMenu {
 	text-decoration: none;
 	padding: 2px;
 	margin: 0;
-	list-style-type: none;
+	list-style: none;
 	z-index: 1000;
 	position: absolute;
 }
@@ -509,19 +509,25 @@ div#CatList ul li.sel {
 	border: 1px solid #D0E1F2;
 }
 
-#_all_, #_dls_, #_com_, #_act_, #_iac_ {
+/*
+   IE6's CSS handler seems to get confused by selectors referencing elements whose
+   IDs start with underscores, and the selector's first underscore is unescaped.
+   (https://developer.mozilla.org/en/underscores_in_class_and_id_names)
+*/
+
+#\_all_, #\_dls_, #\_com_, #\_act_, #\_iac_ {
 	background: transparent url(./images/tstatus.png) no-repeat 4px 0px;
 }
-#_all_ {
+#\_all_ {
 	background-position: 4px -176px;
 }
-#_com_ {
+#\_com_ {
 	background-position: 4px -16px;
 }
-#_act_ {
+#\_act_ {
 	background-position: 4px -160px;
 }
-#_iac_ {
+#\_iac_ {
 	background-position: 4px -192px;
 }
 
@@ -619,9 +625,7 @@ div#dlgSettings .lm {
 	overflow: auto;
 }
 
-div.algnright { text-align: right; }
-
-.lm ul {
+.lm {
 	margin: 0; padding: 0;
 	list-style: none;
 }
@@ -653,10 +657,11 @@ div.algnright { text-align: right; }
 fieldset {
 	position: relative;
 	margin: 4px;
+	padding: 5px;
 	border: 1px solid #D0D0D0;
 	-webkit-border-radius: 6px 6px 6px 6px;
 	-moz-border-radius: 6px 6px 6px 6px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .stg_con table {
@@ -903,7 +908,7 @@ ul#tabs {
 	height: 17px;
 	margin: 0;
 	padding: 3px 0 0 0;
-	list-style-type: none;
+	list-style: none;
 	text-align: left;
 	clear: both;
 	position: relative;
@@ -1072,7 +1077,7 @@ div#dlgAbout div.content {
 /* properties dialog */
 
 div#dlgProps {
-	width: 450px; height: 434px;
+	width: 450px;
 }
 
 div#dlgProps div.dlg-header {
@@ -1085,21 +1090,17 @@ div#dlgProps div.content {
 }
 
 textarea#prop-trackers {
-	width: 100%; height: 100px;
+	width: 405px; height: 100px;
 	background: #FFFFFF;
 	border: 1px solid #D0D0D0;
 	overflow: auto;
-	white-space: nowrap;
-	wrap: no-wrap;
 }
 
 div#dlgProps fieldset div {
-	line-height: 16px;
+	line-height: 18px;
 }
 
 div.props-spacer {
-	height: 16px;
-	line-height: 16px;
 	padding: 0;
 	margin: 0;
 	width: 30%;
@@ -1146,7 +1147,7 @@ a { outline: none; }
 	margin: 5px 0 0 16px;
 	padding: 0;
 	float: right;
-	list-style-type: none;
+	list-style: none;
 }
 
 #sched_table_lgnd .block {
